added features home,and about page

--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -3,4 +3,8 @@
 @tailwind utilities;
 @tailwind base;
 @tailwind components;
-
+/* 
+body {
+  @apply bg-cover bg-center h-screen w-screen bg-fixed  ;
+  background-image: url('./assets/images/alumni.jpeg');
+} */
